--- a/extensions/order-lineup-discount-function/package.json
+++ b/extensions/order-lineup-discount-function/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-discount",
+  "name": "order-lineup-discount-function",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "scripts": {
@@ -25,7 +25,6 @@
     "vitest": "^0.29.8"
   },
   "dependencies": {
-    "@shopify/shopify_function": "0.0.3",
     "javy": "0.1.0"
   }
 }
