--- a/extensions/order-lineup-discount-function/shopify.function.extension.toml
+++ b/extensions/order-lineup-discount-function/shopify.function.extension.toml
@@ -1,6 +1,6 @@
-name = "product-discount"
-type = "product_discounts"
-api_version = "2022-07"
+name = "order-lineup-discount-function"
+type = "order_discounts"
+api_version = "2023-01"
 
 [build]
 command = ""
