--- a/extensions/ui-fields-for-lineup/shopify.ui.extension.toml
+++ b/extensions/ui-fields-for-lineup/shopify.ui.extension.toml
@@ -7,6 +7,8 @@ extension_points = [
 
 [capabilities]
 block_progress = true
+network_access = true
+
 
 # [[metafields]]
 # namespace = "my-namespace"
