--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@shopify/app": "3.46.0",
     "@shopify/cli": "3.46.0",
+    "@shopify/shopify_function": "0.0.3",
+    "javy": "0.0.3",
     "react": "^17.0.2"
   },
   "author": "Usuario",
